Changes to prevent side-scrolling/overflowing of tables on smaller screens. Enabling vertical scrolling of content on 'Prices' display. Styling of prices page to keep <p>s looking neat after applying flex.

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,10 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   --standardyellowtext: rgb(254,197,1);
   /* HEX for this is FEC501 */
   --texthover: #FFEECA;
   --blueaccent: rgb(97, 206, 226);
   --boxbackground: rgba(40, 46, 50, 0.8);
+  width: 100%;
 }
+
+
 
 html, body {
   height: 100vh;
@@ -12,10 +19,11 @@ html, body {
   padding: 0 0 6vh 0;
   /* overflow: hidden;  Prevent scrolling */
   color: var(--standardyellowtext);
+  width: 100%;
 }
 
 .App {
-  min-height:100vh;
+  width: auto;
   text-align: center;
   background-color: black;
   background-image: url("../images/stars_background2_50.jpg");
