--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -4,13 +4,9 @@
     text-align:center;
     justify-content: space-evenly;
     align-items:center;
-
     margin-top:auto;
-
     width:100%;
-   
-
-    position:absolute;
+    position:sticky;
     bottom:0px;
     left:0px;
     height:auto;
