--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -22,6 +22,7 @@
   .navbar {
     list-style-type: none;
     display:flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items:center;
     justify-content: space-between;
@@ -77,6 +78,7 @@
     .navbar {
       list-style-type: none;
       display:flex;
+      flex-wrap: wrap;
       flex-direction: row;
       align-items:center;
       justify-content: space-between;
