--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html, body, #App, #root {
   height: 100vh;
   margin: 0;
   padding: 0;
-  overflow: hidden; /* Prevent scrolling */
+  /* overflow: hidden; Prevent scrolling */
 }
 
 body {
